<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:padding="30dp"
    android:background="@drawable/bubble_border">

    <TextView
        android:text="Recommendations"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/Categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/HBP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Steps to reduce/prevent High Blood Pressure:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HBPRecommendations" />

            <TextView
                android:text="Complications"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="High blood pressure can lead to:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HBPComplications" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LBP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Steps to reduce/prevent Low Blood Pressure:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LBPRecommendations" />

            <TextView
                android:text="Complications"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ligh blood pressure can lead to:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LBRComplications" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/WL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Steps to reduce/prevent Weight Loss:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WLRecommendations" />

            <TextView
                android:text="Complications"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weight loss can be due to:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WLComplications" />
        </LinearLayout>
        <Button
            android:id="@+id/medical_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medical contacts" />
    </LinearLayout>
</LinearLayout>